syntax = "proto3";

package ayborg.gateway.v1;

service Register {
    rpc Register(RegisterRequest) returns (StatusResponse);
    rpc Unregister(UnregisterRequest) returns (StatusResponse);
    rpc Heartbeat(HeartbeatRequest) returns (StatusResponse);
    rpc GetServices(GetServicesRequest) returns (GetServicesResponse);
}

message StatusResponse {
    bool success = 1;
    string error_message = 2;
    string id = 3;
}

message ServiceInfo {
    string id = 1;
    string name = 2;
    string unique_name = 3;
    string type = 4;
    string url = 5;
    string version = 6;
}

message RegisterRequest {
    string name = 1;
    string unique_name = 2;
    string type = 3;
    string url = 4;
    string version = 5;
}

message UnregisterRequest {
    string id = 1;
}

message HeartbeatRequest {
    string id = 1;
}

message GetServicesRequest {
    string id = 1;
    string name = 2;
    string unique_name = 3;
    string type = 4;
    string version = 5;
}

message GetServicesResponse {
    repeated ServiceInfo services = 1;
}
